アクセサ作成を自動化した

--- a/memo/問題と解法.md
+++ b/memo/問題と解法.md
@@ -59,9 +59,11 @@ MyDb().CreateTable_MyTable({'Name': 'Bob'})
         * 固有メソッド定義側の第一引数は`db`(dataset.connect())である
             * `TransactionSetter.py`
                 * `res = self.__transaction(db, *args, **kwargs)`
-        * `TransactionSetter.py`
+        * `./src/5/TransactionSetter.py`
             * 固有メソッド定義クラスを渡して、DBアクセス用クラスを作って返す
                 * 呼出側はアクセサを使うことで目的達成できる
+    * `TransactionSetter`によるアクセサ作成を自動化したい
+        * `./src/6/db/AccesserMeta.py`
 
 結局、新しいアクセス用クラスを動的生成することで解決した。
 
