固有DBクラスの一部を共有化できなかった

--- a/memo/問題と解法.md
+++ b/memo/問題と解法.md
@@ -95,3 +95,56 @@ def transact(func):
 
 関数定義するとき`@connect`と書くが、.pyファイルが読み込まれた時点で実行されるっぽい。そのせいで、動的に変数を渡せない。`DB_URL`とか渡せない。
 
+## 固有DBクラスの一部を共有化できなかった
+
+`./src/7/`で`DatasetParameter.py`により固有DBトランザクタクラスの一部を共有化しようとしたが、なぜかエラーになる。
+
+```sh
+Traceback (most recent call last):
+  File "run.py", line 5, in <module>
+    Accesser().MyDb.CreateTable(table_name, **nt)
+  File "/tmp/work/Python.Sqlite3.class.20180303100000/src/7/db/transact/Transactioner.py", line 20, in Transact
+    res = self.__transaction(db, *args, **kwargs)
+  File "/tmp/work/Python.Sqlite3.class.20180303100000/src/7/db/transact/MyDbTransactioner.py", line 24, in CreateTable
+    print(db.tables)
+  File "/home/pi/root/env/py/auto_github/lib/python3.6/site-packages/dataset/database.py", line 142, in tables
+    return self.inspect.get_table_names(schema=self.schema)
+  File "/home/pi/root/env/py/auto_github/lib/python3.6/site-packages/sqlalchemy/engine/reflection.py", line 201, in get_table_names
+    self.bind, schema, info_cache=self.info_cache)
+  File "<string>", line 2, in get_table_names
+  File "/home/pi/root/env/py/auto_github/lib/python3.6/site-packages/sqlalchemy/engine/reflection.py", line 54, in cache
+    ret = fn(self, con, *args, **kw)
+  File "/home/pi/root/env/py/auto_github/lib/python3.6/site-packages/sqlalchemy/dialects/sqlite/base.py", line 1154, in get_table_names
+    qschema = self.identifier_preparer.quote_identifier(schema)
+  File "/home/pi/root/env/py/auto_github/lib/python3.6/site-packages/sqlalchemy/sql/compiler.py", line 3028, in quote_identifier
+    self._escape_identifier(value) + \
+  File "/home/pi/root/env/py/auto_github/lib/python3.6/site-packages/sqlalchemy/sql/compiler.py", line 3006, in _escape_identifier
+    value = value.replace(self.escape_quote, self.escape_to_quote)
+AttributeError: 'dict' object has no attribute 'replace'
+```
+
+コメントアウトしている箇所が正常。(`./src/6/`)　プロパティを親クラス化しようとしたがエラーが出るようになった。
+```python
+"""
+class MyDbTransactioner:
+    def __init__(self):
+        self.__db_url = 'sqlite:///test.db'
+        self.__dataset_kwargs = None
+    @property
+    def DbUrl(self): return self.__db_url
+    @property
+    def DbKwargs(self): return self.__dataset_kwargs
+"""
+class MyDbTransactioner(DatasetParameter):
+    def __init__(self, db_url=None):
+        if db_url is None: super().__init__('sqlite:///test.db')
+        else: super().__init__(db_url)
+```
+
+`dataset.connect().tables`でエラー。
+```
+/src/7/db/transact/MyDbTransactioner.py", line 24, in CreateTable
+    print(db.tables)
+```
+正常ならテーブル名の配列を返してくれる。
+
